--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
     "jquery": "^3.4.1",
+    "mdbootstrap": "^4.15.0",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-apollo": "^3.1.4",
