--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "apollo-client": "^2.6.8",
     "apollo-link-http": "^1.5.17",
     "bootstrap": "^4.4.1",
+    "core-js": "^3.6.5",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
     "jquery": "^3.4.1",
+    "material-ui-pickers": "^2.2.4",
     "mdbootstrap": "^4.15.0",
+    "mdbreact": "^4.25.5",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-apollo": "^3.1.4",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
     "typescript": "^3.8.3"
   },
   "scripts": {
